packages/components/_private/selector/style/single.less
.select-size(@selector-height;  @select-padding-horizontal; @selector-font-size) {
  .@{selector-prefix} {
    &-content {
      height: @selector-height;
      padding: 0 @select-padding-horizontal;
      font-size: @selector-font-size;
    }

    &-item {
      left: @select-padding-horizontal;
      width: calc(100% - @select-padding-horizontal - @select-icon-font-size);
    }

    &-item,
    &-placeholder,
    &-input-inner {
      line-height: @selector-height - 2 * @select-border-width;
    }
  }
}

.@{selector-prefix}-single {
  .@{selector-prefix} {
    &-content {
      width: 100%;
      display: flex;
    }

    &-input {
      flex: auto;
      width: 0;
      margin-right: (@select-icon-font-size / 2) + @select-icon-margin-right;
    }

    &-item {
      position: absolute;
    }
  }

  &.@{selector-prefix}-opened .@{selector-prefix}-item {
    color: @select-placeholder-color;
  }

  &.@{selector-prefix}-sm {
    .select-size(@select-height-sm, @select-padding-horizontal-sm, @select-font-size-sm);
  }

  &.@{selector-prefix}-md {
    .select-size(@select-height-md, @select-padding-horizontal-md, @select-font-size-md);
  }

  &.@{selector-prefix}-lg {
    .select-size(@select-height-lg, @select-padding-horizontal-lg, @select-font-size-lg);
  }
}

